--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- BARRA DE NAVEGACION -->
 
     <nav class="navbar navbar-inverse">
-    
+
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -52,6 +52,9 @@
        <div class="row", style="background-color:rgba(221, 91, 156, 0.753)">
                <div class=" col-md-6 text-center">
                  <h1 style="color:black; font-family:Ariel;"> ESTUDIO DE COLOR Y  CORTE </h1>
+               </div>
+               <div class="col-md-2 text-center">
+                 <button type="button" class="btn btn-secondary"><a href="adicional.html">Adicional</a></button>
                </div>
       </div>
       <br>
